# goit-ds-hw-03

./: authors.json  dump_to_json.py  main.py  pyproject.toml  scrap_authors.py  scrap_quotes.py  scrapping.py
