[tool.poetry]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = ["HannaMalygina <gannamalygina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
lxml = "^5.2.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
